[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Nikolai Hellwig <info@nikolaihellwig.de>"]
description = "Cassandra Protocol 3 Driver using Tokio"
documentation = "https://docs.rs/tokio-cassandra"
keywords = ["cassandra", "driver", "tokio", "async-io", "general"]
license = "MIT/Apache-2.0"
name = "tokio-cassandra"
repository = "https://github.com/nhellwig/tokio-cassandra"
version = "0.0.0"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.8.1"
tokio-core = "0.1.4"
tokio-proto = "0.1.0"

[features]
