[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Nikolai Hellwig <info@nikolaihellwig.de>"]
description = "Cassandra Protocol 3 Driver using Tokio"
documentation = "https://docs.rs/tokio-cassandra"
keywords = ["cassandra", "driver", "tokio", "async-io", "general"]
license = "MIT/Apache-2.0"
name = "tokio-cassandra"
repository = "https://github.com/nhellwig/tokio-cassandra"
version = "0.0.0"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.8.1"
futures = "0.1.10"
log = "0.3.6"
quick-error = "1.1.0"
semver = "0.6.0"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[dependencies.serde]
optional = true
version = "0.9"

[dependencies.serde_derive]
optional = true
version = "0.9"

[features]
default_features = []
with-serde = ["serde_derive", "serde"]

[replace]

[replace."tokio-core:0.1.4"]
git = "https://github.com/tokio-rs/tokio-core"
