[package]
authors = ["Nikolai Hellwig <info@nikolaihellwig.de>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "A client to connect and query cassandra databases via tokio-cassandra"
documentation = "https://docs.rs/tokio-cassandra"
keywords = ["cassandra", "driver", "tokio", "async-io", "cli"]
license = "MIT/Apache-2.0"
name = "tokio-cassandra-cli"
repository = "https://github.com/nhellwig/tokio-cassandra"
version = "0.0.0"

[[bin]]
doc = false
name = "tcc"

[dependencies]
byteorder = "1.0.0"
clap = "2.20.3"
error-chain = "0.9.0"
futures = "0.1"
log = "0.3.6"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-core = "0.1"

[dependencies.tokio-cassandra]
path = ".."
features = ["with-serde"]
version = "0.0"

[replace]
"tokio-core:0.1.4" = { git = 'https://github.com/tokio-rs/tokio-core' }

[lib]
name = "tcc"
